@@ -1,3 +1,13 @@
+2005-06-24  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/procactions.c: (renice_single_process),
+	(kill_single_process): Fixed confusing error message when libgnomesu is
+	not found (used to display "Success").
+	
+	Original patch by Scott Reeve <sreeves@novell.com>.
+	
+	Closes #308822.
+
 2005-06-23  Scott Reeves  <sreeves@novell.com>
 
 	* src/procdialogs.c src/procdialogs.h 
